conf/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-service
  namespace: dev
spec:
  selector:
    app: wil-playground
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888 
  type: ClusterIP
